--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+body {
+  background-color: #f1f1f8;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app__header > h1 {
+  color: red;
+  font-size: 2rem;
+}
+.app__title {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+.app__titleimage {
+  height: 40px;
+  width: 40px;
+}
+.app__graphTitle {
+  margin-top: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app__dropdown {
+  background-color: white;
+}
+.app__stats {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.app__right {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.app__right .MuiCardContent-root {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+.app__graph {
+  flex-grow: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.app {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.app__left {
+  flex: 0.9;
+}
+.app__graphTitle {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+@media (max-width: 990px) {
+  .app {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media (max-width: 499px) {
+  .app__stats {
+    flex-direction: column;
   }
 }
